# DRRA

./: .env.example  .gitignore  CODE_FLOW_WALKTHROUGH.md  CONFERENCE_DEMO.md  DEMO_SETUP_CHECKLIST.md  DEVELOPMENT_GUIDE.md  DRRA-Postman-Collection.postman_collection.json  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  NAVIGATION_INDEX.md  PROJECT_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TESTING_FLOWCHART.md  TESTING_GUIDE.md  docker-compose.yml  generate_slides.py  requirements.txt
.github/workflows/: ci-cd.yml
backend/: config.py  main.py
backend/db/: __init__.py  models.py  session.py
backend/models/: __init__.py  schemas.py
backend/routes/: __init__.py  dashboard_router.py  forge_router.py  health_router.py  sentinel_router.py  shield_router.py  vigil_router.py
backend/services/: __init__.py  feedback_service.py  forge_service.py  sentinel_service.py  shield_service.py  vigil_service.py
backend/utils/: __init__.py  db_manager.py  kafka_publisher.py  minio_client.py
dashboard/: Dockerfile  README.md  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: Dashboard.jsx  (+1 more)
docs/: ARCHITECTURE.md  CONTRIBUTING.md  add_demo_slide.py  index.html
drra-policies/: README.md  RESILIENCE_PRINCIPLES.md
infra/: deploy.yml  prometheus.yml  vector.toml
integrations/: README.md
scripts/: demo_attack_simulation.py  setup_summary.sh
sentinel/: detector.py
tests/: test_gauntlet.py  test_services.py
vigil/: __init__.py  detector.py
watchers/: Cargo.toml  Dockerfile  README.md
watchers/src/: lib.rs  main.rs
(+55 files in other folders)
