[package]
name = "resilience-watcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "watcher"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
